create summary model

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,3 +31,6 @@ models:
     intermediary:
       materialized: table
       +schema: intermediary
+    summary:
+      materialized: table
+      +schema: summary
