Create reports queries to answer assessment tests

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,3 +34,6 @@ models:
     summary:
       materialized: table
       +schema: summary
+    reports:
+      materialized: table
+      +schema: reporting
