--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,12 +1,10 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
+
 name: 'sumup'
 version: '1.0.0'
 config-version: 2
+require-dbt-version: ">=1.3.0"
 
-# This setting configures which "profile" dbt uses for this project.
 profile: 'default'
 
 model-paths: ["models"]
@@ -16,8 +14,8 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target"  
+clean-targets:         
   - "target"
   - "dbt_packages"
 
